base/checkout/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: checkoutservice
  namespace: checkoutservice
spec:
  host: checkoutservice.checkoutservice.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
