base/checkout/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: checkoutservice
  namespace: checkoutservice
spec:
  hosts:
    - checkoutservice.checkoutservice.svc.cluster.local
  http:
    - route:
        - destination:
            host: checkoutservice.checkoutservice.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: checkoutservice.checkoutservice.svc.cluster.local
            subset: v2
          weight: 10
